# datastruct_book

./: .gitignore  README.md  book-structure.md  content.md  extract_code.py  modern_cpp_data_structures_blueprint.md
code/: CMakeLists.txt  Makefile  README.md  all_chapters_test.cpp  all_tests  ch01_test.cpp  ch02_test.cpp  ch03_test.cpp  ch04_array_list.h  ch04_test.cpp  ch05_linked_list.h  ch05_test.cpp  ch06_test.cpp  ch07_test.cpp  ch08_stacks.h  ch09_queues.h  ch10_hash_table.h  ch11_binary_tree.h  ch12_max_heap.h  ch15_avl_tree.h  ch16_graph.h  ch17_fenwick_segment.h  ch19_bloom_filter.h  ch20_dinic.h  ch21_sorting.h  ch22_string_algorithms.h  test_ch04_array_list  test_ch04_array_list.cpp  test_ch05_linked_list.cpp
code/appendices/: appendices_001.cpp  appendices_002.cpp  appendices_003.cpp
code/ch01/: ch01_001.cpp  ch01_002.txt  ch01_003.txt  ch01_004.cpp  ch01_005.txt  ch01_006.cpp  ch01_007.cpp  ch01_008.cpp  ch01_009.cpp  ch01_010.cpp  ch01_011.cpp  ch01_012.cpp  ch01_013.cpp  ch01_014.cpp  ch01_015.txt  ch01_016.cpp  ch01_017.cpp  ch01_018.cpp  ch01_019.cpp  ch01_020.cpp  ch01_021.cpp  (+34 more)
standalone/: CMakeLists.txt  ch01_modern_cpp.cpp  ch02_performance_analysis.cpp  ch03_performance_measurement.cpp  ch04_linear_lists.cpp  ch05_matrices.cpp  ch06_stacks.cpp  ch07_queues.cpp  ch08_hashing.cpp  ch09_trees.cpp  ch10_priority_queues.cpp  ch11_search_trees.cpp  ch12_graphs.cpp  ch13_strings_tries.cpp  ch14_segment_fenwick_unionfind.cpp  ch15_greedy.cpp  ch16_divide_conquer.cpp  ch17_dynamic_programming.cpp  ch18_backtracking.cpp  ch19_probabilistic.cpp  ch20_maxflow.cpp
(+655 files in other folders)
